# RIOT

./: .gitignore
examples/hello-world/: main.c
sys/crypto-quantum/: Kconfig  ciphers.c
sys/crypto_kem/: Makefile
sys/crypto_kem/elf/: aestest.d  boardtest.d  crypto_kem_kyber768_m4fspeed_test.d  crypto_sign_falcon-1024_m4-ct_hashing.d  crypto_sign_falcon-1024_m4-ct_speed.d  crypto_sign_falcon-1024_m4-ct_stack.d  crypto_sign_falcon-1024_m4-ct_test.d  crypto_sign_falcon-1024_m4-ct_testvectors.d  crypto_sign_falcon-512-tree_m4-ct_hashing.d  crypto_sign_falcon-512-tree_m4-ct_speed.d  crypto_sign_falcon-512-tree_m4-ct_stack.d  crypto_sign_falcon-512-tree_m4-ct_test.d  crypto_sign_falcon-512-tree_m4-ct_testvectors.d  crypto_sign_falcon-512_m4-ct_hashing.d  crypto_sign_falcon-512_m4-ct_speed.d  crypto_sign_falcon-512_m4-ct_stack.d  crypto_sign_falcon-512_m4-ct_test.d  crypto_sign_falcon-512_m4-ct_testvectors.d  mupq_crypto_sign_falcon-1024_opt-ct_hashing.d  mupq_crypto_sign_falcon-1024_opt-ct_speed.d  mupq_crypto_sign_falcon-1024_opt-ct_stack.d  mupq_crypto_sign_falcon-1024_opt-ct_test.d  (+285 more)
sys/fido2/ctap/: ctap.c  (+2 more)
sys/liboqs/: oqs.h  oqsconfig.h
sys/liboqs/kyber/: CMakeLists.txt  Makefile  kem.c  kem.h  kem_kyber.h
sys/liboqs/kyber/pqclean_kyber512_aarch64/: Makefile  aes.h  common.c  common.h  fips202x2.h  fips202x4.h  indcpa.c  oqs.h  oqsconfig.h  ossl_sha3.c  ossl_sha3x4.c
sys/liboqs/kyber/pqclean_kyber512_aarch64/pqclean_shims/: fips202.h  randombytes.h
sys/liboqs/kyber/pqclean_kyber512_aarch64/pqclean_shims/rand/: rand.h
tests/sys_fido2_ctap/: Makefile
(+11 files in other folders)
